# vulnerable-of-things

./: README.md  compose.yaml
backend/: Dockerfile  Index.ts  README.md  env.ts  package.json  pnpm-lock.yaml  tsconfig.json
backend/app/controllers/: Vulnerability.controller.ts  index.ts
backend/app/middlewares/: Validator.ts
backend/app/models/: Configuration.model.ts  Metric.model.ts  Reference.model.ts  Vulnerability.model.ts  Weakness.model.ts  index.ts  types.ts
backend/app/repository/: Configuration.repository.ts  Metric.repository.ts  Vulnerability.repository.ts  Weakness.repository.ts  index.ts
backend/app/routes/: Vulnerability.route.ts  index.ts
backend/app/services/: Vulnerability.service.ts  index.ts
backend/config/: Database.ts  Router.ts  Server.ts
frontend/: .env-exemple  package-lock.json  package.json  tailwind.config.js
frontend/src/assets/: illustration_bug.jsx  illustration_iot.jsx  illustration_shield.jsx  index.jsx
frontend/src/components/: Breadcrumbs.jsx  EmptyContent.jsx  EntriesChart.jsx  GridSummary.jsx  Header.jsx  Image.jsx  LoadingScreen.jsx  Logo.jsx  NotistackProvider.jsx  Page.jsx  ProgressBar.jsx  Scrollbar.jsx  SearchToolbar.jsx  Top5Elements.jsx  index.jsx
frontend/src/hooks/: index.jsx  useOffSetTop.jsx  useResponsive.jsx  useTable.jsx  useVendors.jsx  useVulnerabilities.jsx  useVulnerability.jsx
frontend/src/pages/: _app.js  _document.js  index.jsx
frontend/src/services/: api.jsx  cve.service.jsx  index.jsx
updater/: .gitignore  Dockerfile  pyproject.toml  setup.py
updater/src/: __init__.py  scheduler.py
(+36 files in other folders)
